--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             text-decoration: none;
             color: #fff;
             font-size: 20px;
-            font-family: monospace;
+            font-family: monospace, "serif";
             padding: 10px;
         }
 
@@ -59,7 +59,7 @@
             top: 25%;
             color: white;
             background-color: black;
-            font-family: monospace;
+            font-family: monospace, "serif";
             border: 1px solid black;
             padding: 10px;
         }
